--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ twitter_username: whdzera
 github_username:  rokhimin/jekyll-nik-parse
 
 permalink: /:title.rb
-files: "/jekyll-search-yugioh-card"
+files: "/jekyll-nik-parse"
